*Empty MediaWiki Message*

--- a/Soomaali_Galbeed.mw
+++ b/Soomaali_Galbeed.mw
@@ -1,7 +1,7 @@
 {{Infobox settlement
 <!-- See Template:Infobox settlement for additional fields and descriptions -->| name                            = Somali  Region
-| official_name                   =Dawlad Deegaanka Soomaalida. 
-| native_name                     = (Gobolka Ogaden)
+| official_name                   =Dawladda Deegaanka Soomaalida. 
+| native_name                     = (Deegaanka Soomaalida)
  <br>{{small|የሶማሌ ክልል}}
 | native_name_lang                = Somali
 | settlement_type                 = [[Gobolada Itoobiya|Dowlad goboleed]]
@@ -36,7 +36,7 @@
 | established_title               = 
 | established_date                = 
 | founder                         = <!-- seat, smaller parts ------->
-| seat_type                       = Caasimada
+| seat_type                       = Caasimadda
 | seat                            = [[Jigjiga]]
 | parts_type                      = <!-- defaults to: Boroughs -->
 | parts_style                     = 
