--- a/Buur-Cukur.mw
+++ b/Buur-Cukur.mw
@@ -1,1 +1,3 @@
-'''Buur-Cukur.'''
+'''Buur-Cukur: Waa tuulo qadiimi ah oo katirsan [[Degmada Feer-feer]] ee [[DDS|Dawlad Deegaanka Soomaalida]] ee dalka Itoobiya.Waxa ay xuduud la leedahay [[Mustaxiil|Degmada Mustaxiil]] iyo tuulada [[Abaaley]].Waxaa mara [[Wabiga Shabeelle]] waana dhul-beer eed qani ah oo ku habboon tabcashada waxaana ku beeran inta badan dalaga iyo miraha ay [[Dad|dadka]] [[Soomaaliyeed]] isticmaalaan.Waxa marta wada Laamiga ah ee uu talyaanigii dhisay oo ku xidha ilaa iyo [[Beledweyne]].Waxa ay qiyaastii 230km ujirtaa Magaalada [[Godeey|Godey]] ee xarunta u ah Gobolka [[Shabeele|Shabeelle]] ee [[DDS]].'''
+
+Waxa dega [[Beesha shanaad|Beesha]] [[Reer Aw Xassan]]
