*Empty MediaWiki Message*

--- a/Mudulood.mw
+++ b/Mudulood.mw
@@ -26,7 +26,7 @@ Wacweteen mudulood (c/raxmaab.) MUDULOOD.!!
 ***[[Hiilebi]] Dalandoole Mudulood.
 *** Wacdaan Cusmaan Mudulod.
 ***[[Abgaal]] Cusmaan Mudulood.
-*** Moobileyn Cusmaan Mudulod.
+*** Moobleem  Cusmaan Mudulod.
 *** Ilawaay Cusmaan Mudulood.
 *Ogow Cururadka qabaa'ilada beesha ama MUDULOOD; Sayyed-kooda waa "Maxamed" MUDULOOD; ujeejeen'na iyo c/raxmaan mudulood oo low yaqano wacweyteen.
 *Baritaan kabacdi oo leesku heeysto ISAMADA Beelaha Mudulood; SEDEXOODA & SHANTOTOODA Faruuc aay ukala baxaan beellaha oo dhan MUDULOOD.!!
