*Empty MediaWiki Message*

--- a/Cengiz_Ünder.mw
+++ b/Cengiz_Ünder.mw
@@ -47,4 +47,4 @@
 | nationalteam-update = 14 November 2019
 }}
 
-'''Cengiz Ünder''' ({{IPA-tr|dʒeɲˈɟiz ynˈdæɾ}}; born 14 July 1997)
+'''Cengiz Ünder''' ({{IPA-tr|dʒeɲˈɟiz ynˈdæɾ}}; dhashay 14 Luuliyo 1997) waa ciyaaryahan u dhashay wadanka Turkiga.
