*Empty MediaWiki Message*

--- a/Guriceel.mw
+++ b/Guriceel.mw
@@ -77,13 +77,12 @@ iskuulada Ugu Caansan waxaa Kamida
 # Ablaal primary & secondary School
 # Adult Commercial school.
 #Aisha bintu abiibakar primary & secondary school
-waxaa Soo uruuriyay Eng.Ahmed mohamed farah (muumin)
 
 Aqoonyahanada Degmada Waxaa Kamid ah.
 
 1.Abdirahman Abdishakuur warsame
 
-2. Saacid Geelle Jaamac
+2. Gallad Dahir caato
 
 3. eng.Addaawe farah Abdulle
 
