--- a/Guriceel.mw
+++ b/Guriceel.mw
@@ -127,11 +127,7 @@ Gaaroole waa deegaan khadiimi ah oo jiray muddo dheer.
 == Dhaqaalaha ==
 [[File:Guricel taxi.jpg|thumb|263x263px|Gaadiidka guriceel]]
 Guriceel waa magaalo sida magaalooyinka kale ee gobolada dhexe dhaqaaleheedu ku tiirsanyahay Xoolaha nool iyo tijaarada kalaba. Guriceel waxey ku taalaa bartamaha Soomaaliya, taas oo la dhihi karo waa buundo bariyeed isku xirta ganacsiga gobolda Wuqooyi, bari iyo kuwa koofureed ee wadanka. Magaalda Guriceel, iyadoo cimri ahaan iska yar, ayaa hadana dhaqaaleheedu waxa uu yahay Degmada ugu dhaqaalaha badan gobolka galgaduud taasoo laga dareemi karo horumarka magaalagu ku talaabsanayso taasoo aad ku arkaydo daafaha magaalada dhismeyaal aad u waawayn oo ay maal gashadeen jaaliyadaha debeda kadib markay soo jiidatay horumarka ay ku tilaabsatay. magaaladu waxay leedahay ganacsiyaal waawayn oo iskugu jira shirkado ganacsi iyo kuwo gaar loo leeyahay sida shirkadaha isgaarsiinta, shirkadaha dhismada, ceelasha biyaha iyo schooladka oo iskugu jiray hoose dhexe iyo sare iyo jaamacado sida bariga afrika university iyo sentral university. haddii aad magaalada dhex marto waxaad arkaysaa suuqyada oo aad u camira sida baqaarada, xawaaladaha, bacadleyaasha iyo dhamaan qalabyada Electronikada. waxaad arkaysaa maqaayado casri ah iyo hoteelo u dhigma kuwa dunida horumaray. guriceel waxaa liis loogu jiraa engineerada guryaha dhisa inbadana waxaad arkaysaa dhismeyaal cusub oo meelkasta ka socda iyo dabaqyo aan horay looga baran. shirkadaha xoolaha dhoofiyo waxay ku leeyihiin xaafiisyo waawayn oo maalinkasta laga dhoofiyo xoolo u badan ari taasi oo dhaqaalaha deegaanku aad ugu tiirsan yahay. Guriceel waxaa degan Hayádo badan oo iskugu jira UN iyo international organsizations waxaana ka mid ah Hay'adda caalamiga ah ee MSF, ACF, SAVE THE CHILDERN iyo dhamaan Hayádaha UN ka sida wfp, who, uniceif, unhcr, iyo coopi international. sidoo kale waxaa ka hawl gala ururda wadaniga ah ee kala BRADO, SAHED iyo APCC,oo dhamaantood dadka deegaanka u qabtay gargaar iskugu jira badbaadin iyo horumarin. 
-abdisamad nuur jaako mr guulwade
-
-Galad xasan Kaarie
-
-nuur cali bare sahal waa ganacsadaha ugu weyn ee gobolada dhexe waana siyaasi ka ganacsada qaadka ahna ganacsadaha dhisay airport ka degmada guriceel waaxaan maalin kasta usoo dagaa diyaarada qaad ka soo qaday nairobi.
+abdisamad nuur jaako.
 
 == Siyaasadda ==
 Magalada guriceel waa magaalo kobaceedu si haarsare ah ku socdo, cimri ahaana waa magaalo la dhihi karo waxay hano qaaday , waqtigii la dhisaayay laamiga dheer oo bari iyo koofur isku xira ee magaalada dhex mara.
