--- a/Kaaraan.mw
+++ b/Kaaraan.mw
@@ -60,7 +60,7 @@
 ==== Xaafadaha ====
                                                                                           
 Buulo Recey, Ciyaal Jardiin, Alshareeca [ex siliga], Mariino, Buurka Diikow,
-Arjantiin, Jamhuuriya, Xaajiyo culumo, Tookiyo,school Godeey, Jiirada. xaafada qawaaji, buulo maaxay, xerka dheere, Lafwayn, Sheekh Cali Cabdulle, Buulo Dhaaniye, Buulo cali gaaf, xaafadda garboole,  cali geedi , macallin yuusuf , faay caato,ciyaal faroole, xaafadda telefishinka, ceelka maxaadeey, xaafada siisii,xaafadda khawaaji, irshaad, xaafadda cali jiilaal.<nowiki>''
+Arjantiin, Jamhuuriya, Xaajiyo culumo, Tookiyo,school Godeey, Jiirada. xaafada qawaaji, buulo maaxay, xerka dheere, Lafwayn, Sheekh Cali Cabdulle, Buulo Dhaaniye, Buulo cali gaaf, xaafadda garboole,  cali geedi , macallin yuusuf , faay caato,ciyaal faroole, xaafadda telefishinka, ceelka maxaadeey, xaafada siisii,xaafadda khawaaji, irshaad.
 
 ==== Dugsiyada ====
 Kuwii hore
