*Empty MediaWiki Message*

--- a/Dowladii_Darawiish.mw
+++ b/Dowladii_Darawiish.mw
@@ -13,7 +13,7 @@
 |official_languages = {{hlist|[[Af-Soomaali|Soomaali]] |}}
 |GDP\BNP=rasmi-la'aan}}
 
-'''Dawlada Darawiish''' waxay ahayd qaran gumeysi-diid, qaran Dhulbahante<ref>[http://dspace-roma3.caspur.it/bitstream/2307/2960/1/The%20scramble%20in%20the%20Horn%20of%20Africa.%20History%20of%20Somalia%20(1827-1977).pdf THE SCRAMBLE IN THE HORN OF AFRICA], Mohamed Omar, 2001,  "In his last letter the Mullah pretends to speak in the name of the Darwiishes, their Amir (himself), and the Dolbahanta tribes. This letter shows his object is to establish himself as the Ruler of the Dolbahanta, and it has a Mahdist look"</ref>, iyo qaranka ku xigeenka ee Garaadada oo noqotay sanadka 1896, markaas guud ahaan dawladda bulshadda [[Dhulbahante]]. Goobta ugu horayd waxay ahayd goobtii [[Docmo]] oo magaalo Axmed garaad Dhulbahante ah. Guutooyinka Darawiish waxay u kala baxeen Shiikhyaale (Dhulbahante), Golaweyne (Dhulbahante), Taargooye (Bakhad, Xamud Ugaas, Hayaag, Ebirar, Hinjiile), Indhabadan (Naleeye Axmed + Qayaad Dhulbahante), Miinanle (Cali Geri & Odala Bahgeri Dhulbahante iyo Ogaden), Dharbash (Ararsame & Baharsame Dhulbahante iyo Xasan Adan Madobe), iyo Ragxun (Caligeri & Caraale Mahad iyo Ogaden), Ba-udgoon (Cigaal Naleeye iyo Odala Samakab Dhulbahante).
+'''Dawlada Darawiish''' waxay ahayd qaran gumeysi-diid, qaran Dhulbahante<ref>[http://dspace-roma3.caspur.it/bitstream/2307/2960/1/The%20scramble%20in%20the%20Horn%20of%20Africa.%20History%20of%20Somalia%20(1827-1977).pdf THE SCRAMBLE IN THE HORN OF AFRICA], Mohamed Omar, 2001,  "In his last letter the Mullah pretends to speak in the name of the Darwiishes, their Amir (himself), and the Dolbahanta tribes. This letter shows his object is to establish himself as the Ruler of the Dolbahanta, and it has a Mahdist look"</ref>, iyo qaranka ku xigeenka ee Garaadada sanadka 1896, ee ku yaalay goobaha [[Khaatumo]], markaas guud ahaan dawladda bulshadda [[Dhulbahante]]. Goobta ugu horayd waxay ahayd goobtii [[Docmo]] oo magaalo Axmed garaad Dhulbahante ah. Guutooyinka Darawiish waxay u kala baxeen Shiikhyaale (Dhulbahante), Golaweyne (Dhulbahante), Taargooye (Bakhad, Xamud Ugaas, Hayaag, Ebirar, Hinjiile), Indhabadan (Naleeye Axmed + Qayaad Dhulbahante), Miinanle (Cali Geri & Odala Bahgeri Dhulbahante iyo Ogaden), Dharbash (Ararsame & Baharsame Dhulbahante iyo Xasan Adan Madobe), iyo Ragxun (Caligeri & Caraale Mahad iyo Ogaden), Ba-udgoon (Cigaal Naleeye iyo Odala Samakab Dhulbahante).
 
 Xarunta daraawiish wuxuu ku yaali jirey waqooyada [[Dhulbaxsinta Afrika|dhulbaxsinta]], gar ahaan [[Buuhoodle]] (1897), [[Taleex]] (1910) iyo [[Jidali]] (1920). Waxay waliba ahayd dhaqdhaqaaq oo horjeeday gumeysiga dawladaha reer Galbeed. Hoogaamiyaha ciidanka Daraawiish wuxuu ahaa [[Ismaaciil Mire]]. Abaanduulkii guud ee Darwiish na wuxuu ahaa [[Ismaaciil Mire]]. Dhiirigelinka bulshada Darwiish na wuxuu ahaa [[Ismaaciil Mire]]. Ismaamulkan waxaa aasaaskiisa lahaa [[Sayid Maxamed Cabdulle Xassan]], oo ahaa madaxa [[qusuusi]]ga iyo madaxa dawlada.<ref>Encyclopedia of African history – Page 1406{{Full citation|date=January 2012}}</ref><ref>The modern history of Somaliland: from nation to state – Page 78{{Full citation|date=January 2012}}</ref><ref>Historical dictionary of Ethiopia – Page 405{{Full citation|date=January 2012}}</ref> 
 
