*Empty MediaWiki Message*

--- a/Dowladii_Darawiish.mw
+++ b/Dowladii_Darawiish.mw
@@ -8,7 +8,7 @@
 |image_map = 1901 - 1902 Darwiish.png
 |map_caption = Xuduudki Darwiish 1902gii
 |demonym = [[Duubcad]] ama "Bulshada Daraawiish"
-|capital = [[Dareemo Caddo]], Buuhoodle (1896-1898)<br>[[Qoob Fardood]], Buuhoodle (1899)<br>[[Baran]], Sool (1900)<br>[[Weylahed]] iyo Beretabli iyo Fardhidin (1901)<br>Lassader iyo Yahelli (1902 - 1905)<br>Halin (1908)<br>Taaleex (1909 - 1920)<br> Jidali (1919)
+|capital = [[Dareemo Caddo]], Buuhoodle (1896-1898)<br>[[Sacmadeeqa]], Buuhoodle (1899)<br>[[Baran]], Sool (1900)<br>[[Weylahed]] iyo Beretabli iyo Fardhidin (1901)<br>Lassader iyo Yahelli (1902 - 1905)<br>Halin (1908)<br>Taaleex (1909 - 1920)<br> Jidali (1919)
 |national_anthem = gabayadii Ismaaciil Mire iyo Sayyidka<br><center></center>
 |official_languages = {{hlist|[[Af-Soomaali|Soomaali]] |}}
 |GDP\BNP=rasmi-la'aan}}
