*Empty MediaWiki Message*

--- a/Saint-Denis.mw
+++ b/Saint-Denis.mw
@@ -1,4 +1,4 @@
-[[File:Mairie-saint-denis.JPG|thumb|Saint-Denis de la Réunion]]
+[[File:Mairie-saint-denis.JPG|thumb|400px|Saint-Denis de la Réunion]]
 
 '''Saint-Denis''' waa caasimada jasiirada [[Reunion]]
 
