--- a/Saint-Denis.mw
+++ b/Saint-Denis.mw
@@ -1,7 +1,9 @@
 [[File:Mairie-saint-denis.JPG|thumb|400px|Saint-Denis de la Réunion]]
 
-'''Saint-Denis''' waa caasimada jasiirada [[Reunion]]
-{{Flag|Reunion}}
+'''Saint-Denis''' waa caasimada jasiirada reunion
+
+
+
 == Taariikh ==
 Saint-Denis waxaa la aasaasay 1669 by guddoomiyihii Faransiiska ugu horeeyey ee Bourbon jasiiradda, Étienne Regnault. Saint-Denis waa caasimadda ah ee jasiiradda ee 1738 ka yar Guddoomiyaha Bertrand-François Mahé de La Bourdonnais.
 
