*Empty MediaWiki Message*

--- a/Mahathir_Bin_Maxamed.mw
+++ b/Mahathir_Bin_Maxamed.mw
@@ -1,5 +1,5 @@
 [[File:Mahathir_Mohamad_addressing_the_United_Nations_General_Assembly_(September_25_2003).jpg|thumb|Mahathir Bin Maxamed]]
-
+* {{Flag|Malaysia}}
 Waa mid ka mid ah dadka ugu cad cad madaxda dalalka [[islaamka]] ee casrigaan, waana mid ka mid ah dadka ugu magaca dheer ummadda muslimiinta dhexdooda ,waa hormariyaha dhanka dhaqaale Wax barasho, [[Technology]] ee dalka [[Malasiya]], da'diisu iminka waa 82 sano jir. Waa ra'iisul wasaaarihii [[Malaysiya]] intii u dhexeysey [[1981]] ilaa [[2003]]. 
 
 Dadka ayaa waxay ku tiriyaan inuu yahay ninka da'yartii dalkiisa intii wax baranaysay u kala diray dalalka [[Maraykanka]], [[Ingriiska]] iyo dalal kale ee caalamka si ay uga soo shidaal qaadaan dhanka wax barshada isla markana ay dalka ku soo celiyaan waxii ay soo barteen sidaa ayay ku gaareen hormarka ay maanta ku taamayaan reer Malaysia. 
