--- a/Dowladii_Darawiish.mw
+++ b/Dowladii_Darawiish.mw
@@ -23,6 +23,8 @@ Dowladii boqortooyada ee Daraawiishtu waxay halgan xornimo doon ah la galeen dha
 Caasimadda koowaad waxay ahayd [[Dareema Caddo]], Buuhoodle; ta labaad na [[Buuhoodle]], [[Qoob Fardood]] (1896 ilaa 1899). Caasimadda labaad waxay ahayd [[Lassader]] (1900 ilaa 1904). Caasimadda saddexaad ee dirir ah, waxay ahayd [[Halin]] (1908 ilaa 1909). Caasimadda afaraad waxay ahayd Taaleex (1910 ilaa 1920).
 
 ==Kooxaha==
+[[File:Dervish division.png|thumb|kooxaha]]
+
 *[[Garaad]]
 *[[Sayyidate]]
 
