--- a/Sayid_Maxamed_Cabdule_Xasan.mw
+++ b/Sayid_Maxamed_Cabdule_Xasan.mw
@@ -65,7 +65,8 @@ Dhulka masaajid iyo madaaris midna ma lahayn, oo wuxuu ahaa miyi, waxaase jirey 
 Qeybta: Taariikhda cagaf Soomaaliya]]
 
 == Taariikh Nololeed ==
-                                                                                            
+[[File:Dervish division.png|thumb|kooxaha]]
+                                                          
 Taariikhda aan la xasuusan, cidna sheegi karin ayaa Sheekh xasan nuur oo sayidka maxamed awoowgiis ahaa ka tegay magaalad Qallaafo  ee dawlada deegaanka soomaalida ethiopia ah dhulka wabiga shabeelle ku magacaaban, halkaas oo beeshuu ka dhashay degganayd. Wuxuuna u nacay Mudug oo ahayd dal wanaagsan duunyadana hodan ka ah, si fiicanna loogu noolaan karey, culimaduna had iyo jeer u xoola doonan jireen. 
 
 Shiikh Xasan markuu Nugaal mudda joogey oo uu dadkii iyo dalkii kala bartay, xoolo fiicanna ka helay waxa gashay hawo guur, dabadeedna. waxaa uu guursaday gabadh reer Nugaaleed ah oo magaceeda lagu tibaaxay khadiijo jaamac(1). Shiikhu Nugaal wuxuu ku guursaday afar dumar ah oo u dhalay carruur. badan, carruurtaa tiradooda waxa lagu sheegay 12 wiil iyo 11 gabdhood.Waxaa la weriyey in shiikh cabdille oo sayid maxamed aabihiis ahaa carruurta ugu weynaa. 
