*Empty MediaWiki Message*

--- a/Bartire.mw
+++ b/Bartire.mw
@@ -1,6 +1,6 @@
 '''Bartire''' waa beel ka mid ah beelaha somaliyeed ee [[Jidwaaq]], beesha waxay degtaa saddex waddan oo bariga afrika ka tirsan, sida soomaaliya, itoobiya iyo kenya .
 
-Meelaha ee dhulka soomaaliya ka degaan waxaa ka mid ah degmada [[Xagar]] ee gobolka Jubbada hoose .Dhinaca dalka itoobiya waxaay  ka degaan magaalooyinka [[Jigjiga]] ,\e. Reer Cilmi Waceys Cumar Maxamuud
+Meelaha ee dhulka soomaaliya ka degaan waxaa ka mid ah degmada [[Xagar]] ee gobolka Jubbada hoose kismayo bu'aale .Dhinaca dalka itoobiya waxaay  ka degaan magaalooyinka [[Jigjiga]]  shabeley wooble iyo mela kale Reer Cilmi Waceys Cumar Maxamuud
 3.Goboobe Xirsi Maxamuud 
 1.Reer Aamin Gaboobe Maxamuud
 2.Reer Cismaan Gaboobe Maxamuud 
