--- a/Talk:Dowladii_Darawiish.mw
+++ b/Talk:Dowladii_Darawiish.mw
@@ -1,2 +1,3 @@
 ==Tixraac==
 Eeg: [http://dspace-roma3.caspur.it/bitstream/2307/2960/1/The%20scramble%20in%20the%20Horn%20of%20Africa.%20History%20of%20Somalia%20(1827-1977).pdf THE SCRAMBLE IN THE HORN OF AFRICA], Mohamed Omar, 2001,  "In his last letter the Mullah pretends to speak in the name of the Darwiishes, their Amir (himself), and the Dolbahanta tribes. This letter shows his object is to establish himself as the Ruler of the Dolbahanta, and it has a Mahdist look". [[User:Sidhan hilakul|Sidhan hilakul]] ([[User talk:Sidhan hilakul|wadahadal]]) 14:56, 23 Luuliyo 2020 (UTC)
+::Mudane/Marwo [[User:Sidhan hilakul|Sidhan hilakul]] marka hore waan ku salaamay. Boggan ''Dowladii Daraawiishta (qaran Dhulbahante)'' wuxuu u sameeysan yahay si qaab daran. Ciwaanku waa khalad, qoraalka meesha aad ka soo buuxisay ma ahan wax xaqiiqo ah. Aniga waan taageersanahay inaad amaanto cida aad jeceshahay laakiin sidan waa qaab daro. Maqaalkan hadii aad wax ka bedeli weydo, waa la [[tirtir]]i doonaa ee sidaas ula soco. [[User:Ismail4all|Ismail4all]] ([[User talk:Ismail4all|wadahadal]]) 05:22, 25 Luuliyo 2020 (UTC)
