--- a/Dowladii_Darawiish.mw
+++ b/Dowladii_Darawiish.mw
@@ -1,4 +1,6 @@
 {{Qoraal dheer}}
+{{Caddayn u baahan}}
+{{tirtir|Qoraal aan macno lahayn, u qoran qaab khalad ah iyo lahayn cadayn.[[User:Ismail4all|Ismail4all]] ([[User talk:Ismail4all|wadahadal]]) 05:22, 25 Luuliyo 2020 (UTC)}}
 {{Infobox country
 |conventional_long_name = Darawiish State
 |native_name = ''Dawladda Darawiish''
