--- a/Dowladii_Darawiish.mw
+++ b/Dowladii_Darawiish.mw
@@ -1,6 +1,3 @@
-{{Qoraal dheer}}
-{{Caddayn u baahan}}
-{{tirtir|Qoraal aan macno lahayn, u qoran qaab khalad ah iyo lahayn cadayn.[[User:Ismail4all|Ismail4all]] ([[User talk:Ismail4all|wadahadal]]) 05:22, 25 Luuliyo 2020 (UTC)}}
 {{Infobox country
 |conventional_long_name = Darawiish State
 |native_name = ''Dawladda Darawiish''
@@ -15,11 +12,11 @@
 |official_languages = {{hlist|[[Af-Soomaali|Soomaali]] |}}
 |GDP\BNP=rasmi-la'aan}}
 
-'''Dawlada Darawiish''' waxay ahayd qaran gumeysi-diid, qaran Dhulbahante<ref>[http://dspace-roma3.caspur.it/bitstream/2307/2960/1/The%20scramble%20in%20the%20Horn%20of%20Africa.%20History%20of%20Somalia%20(1827-1977).pdf THE SCRAMBLE IN THE HORN OF AFRICA], Mohamed Omar, 2001,  "In his last letter the Mullah pretends to speak in the name of the Darwiishes, their Amir (himself), and the Dolbahanta tribes. This letter shows his object is to establish himself as the Ruler of the Dolbahanta, and it has a Mahdist look"</ref>, iyo qaranka ku xigeenka ee Garaadada sanadka 1896, ee ku yaalay goobaha [[Khaatumo]], markaas guud ahaan dawladda bulshadda [[Dhulbahante]]. Goobta ugu horayd waxay ahayd goobtii [[Docmo]] oo magaalo Axmed garaad Dhulbahante ah. Guutooyinka Darawiish waxay u kala baxeen Shiikhyaale (Dhulbahante), Golaweyne (Dhulbahante), Taargooye (Bakhad, Xamud Ugaas, Hayaag, Ebirar, Hinjiile), Indhabadan (Naleeye Axmed + Qayaad Dhulbahante), Miinanle (Cali Geri & Odala Bahgeri Dhulbahante iyo Ogaden), Dharbash (Ararsame & Baharsame Dhulbahante iyo Xasan Adan Madobe), iyo Ragxun (Caligeri & Caraale Mahad iyo Ogaden), Ba-udgoon (Cigaal Naleeye iyo Odala Samakab Dhulbahante).
+'''Dawlada Daraawiish''' ({{lang-ar|دولة الدراويش}}; {{lang-en|Dervish state}}) waxay ahayd maamul nooc boqotooyo ah oo jiray horaantii qarnigii 20aad deegaano ka mid ah meelaha dadka Soomaaliyeed ku dhaqan yihiin. Ismaamulkan waxaa aasaaskiisa lahaa Sayid Maxamed Cabdulle Xassan, oo ahaa hogaamiye diineed, abaanduulihii ciidamada Daraawiishta, hogaamiye bulsho iyo gabayaa caan ka ahaa geyiga Soomaaliyeed oo dhan.<ref>Encyclopedia of African history – Page 1406{{Full citation|date=January 2012}}</ref><ref>The modern history of Somaliland: from nation to state – Page 78{{Full citation|date=January 2012}}</ref><ref>Historical dictionary of Ethiopia – Page 405{{Full citation|date=January 2012}}</ref> 
 
-Xarunta daraawiish wuxuu ku yaali jirey waqooyada [[Dhulbaxsinta Afrika|dhulbaxsinta]], gar ahaan [[Buuhoodle]] (1897), [[Taleex]] (1910) iyo [[Jidali]] (1920). Waxay waliba ahayd dhaqdhaqaaq oo horjeeday gumeysiga dawladaha reer Galbeed. Hoogaamiyaha ciidanka Daraawiish wuxuu ahaa [[Ismaaciil Mire]]. Abaanduulkii guud ee Darwiish na wuxuu ahaa [[Ismaaciil Mire]]. Dhiirigelinka bulshada Darwiish na wuxuu ahaa [[Ismaaciil Mire]]. Ismaamulkan waxaa aasaaskiisa lahaa [[Sayid Maxamed Cabdulle Xassan]], oo ahaa madaxa [[qusuusi]]ga iyo madaxa dawlada.<ref>Encyclopedia of African history – Page 1406{{Full citation|date=January 2012}}</ref><ref>The modern history of Somaliland: from nation to state – Page 78{{Full citation|date=January 2012}}</ref><ref>Historical dictionary of Ethiopia – Page 405{{Full citation|date=January 2012}}</ref> 
-
+==Hordhac==
 Dowladii boqortooyada ee Daraawiishtu waxay halgan xornimo doon ah la galeen dhamaan gumeystihii dhulka joogay wakhtigaasi oo ugu horeeyay [[Ingiriis]] oo heystay [[Somaliland|gobolada Waqooyiga]] iyo [[Talyaani]]ga oo ka ariminayay gobolada koonfureed. After a quarter of a century of holding the British at bay, the Dervishes were finally defeated in 1920.
+Xarunta daraawiish wuxuu ku yaali jirey waqooyada [[Dhulbaxsinta Afrika|dhulbaxsinta]], gar ahaan [[Buuhoodle]] (1897), [[Taleex]] (1910) iyo [[Jidali]] (1920). Waxay waliba ahayd dhaqdhaqaaq oo horjeeday gumeysiga dawladaha reer Galbeed. Hoogaamiyaha ciidanka Daraawiish wuxuu ahaa [[Ismaaciil Mire]]. Abaanduulkii guud ee Darwiish na wuxuu ahaa [[Ismaaciil Mire]]. Dhiirigelinka bulshada Darwiish na wuxuu ahaa [[Ismaaciil Mire]]. Ismaamulkan waxaa aasaaskiisa lahaa [[Sayid Maxamed Cabdulle Xassan]], oo ahaa madaxa [[qusuusi]]ga iyo madaxa dawlada.<ref>Encyclopedia of African history – Page 1406{{Full citation|date=January 2012}}</ref><ref>The modern history of Somaliland: from nation to state – Page 78{{Full citation|date=January 2012}}</ref><ref>Historical dictionary of Ethiopia – Page 405{{Full citation|date=January 2012}}</ref> 
 
 ==Caasimadda==
 Caasimadda koowaad waxay ahayd [[Dareema Caddo]], Buuhoodle; ta labaad na [[Buuhoodle]], [[Qoob Fardood]] (1896 ilaa 1899). Caasimadda labaad waxay ahayd [[Lassader]] (1900 ilaa 1904). Caasimadda saddexaad ee dirir ah, waxay ahayd [[Halin]] (1908 ilaa 1909). Caasimadda afaraad waxay ahayd Taaleex (1910 ilaa 1920).
@@ -34,7 +31,6 @@ Caasimadda koowaad waxay ahayd [[Dareema Caddo]], Buuhoodle; ta labaad na [[Buuh
 [[File:Boodey, Ismaaciil Mire horse.jpg|thumb|left|[[Boodey]], wuxuu ahaa faraskii [[Ismaaciil Mire]].]]
 [[File:Commander.png|thumb|left|Garaadada gaanaha ee Darwiish.]]
 [[File:Sayyids Darwiish 1908.svg|thumb|Xuduudkii 1908]]
-
 
 ==Asalka==
 [[File:Sayyid Mohammed Abdullah Hassan.jpeg|thumb|left|180px|Sanabka [[Sayid Maxamed Cabdulle Xassan]] ee ku yaala farasmagaalka [[Muqdisho]], [[Soomaaliya]].]]
