--- a/Yaaqshiid.mw
+++ b/Yaaqshiid.mw
@@ -28,7 +28,7 @@
 | area_footnotes      = 
 | area_total_km2      = 67
 | population_footnotes = 
-| population_total    = 47012
+| population_total    = 1m
 | population_as_of    = 2012
 | pop_density_footnotes = 
 | population_demonym  = Ree Yaaqshiid
