--- a/Xasan_Khayre.mw
+++ b/Xasan_Khayre.mw
@@ -1,9 +1,8 @@
 [[File:Hassan Ali.png|300px|right|thumb]]
 
-'''Xasan Cali Khayre'''  dhashay 15 Abriil [[1968]], oo loo yaqaan Xasan Khayre<ref>http://www.africanews.com/2018/08/14/eritrea-delegation-in-somalia-to-deepen-bilateral-relations/</ref> waa siyaasi Soomaali,  ahna [[Ra'iisul wasaare|Raiisul Wasaaraha]] hadda ee [[Soomaaliya]] . Waxaa loo magacaabay 23 Febraayo [[2017]], waxaa u magacaabay Madaxweynaha Soomaaliya [[Maxamed Cabdulaahi Maxamed]]<ref> http://mareeg.com/somali-new-president-appoints-hassan-ali-khaire-as-prime-minister/</ref>, waxaana ansixiyay xubnaha baarlamaankana badankooda 1da maarso [[2017]].<ref> http://goobjoog.com/english/parliament-unanimously-endorses-hassan-khaire-new-pm|title=Parliament unanimously endorses Hassan Khaire as new PM|publisher=Goobjoog News|date=1 March 2017</ref>, Waxaa u codeysay 231 xildhibaan oo ah dhammaan mudanayaasha fadhiga baarlamaanka<ref>https://www.bbc.com/somali/war-39125689</ref> 
+'''Xasan Cali Khayre'''  dhashay 15 Abriil [[1968]], oo loo yaqaan Xasan Khayre<ref>http://www.africanews.com/2018/08/14/eritrea-delegation-in-somalia-to-deepen-bilateral-relations/</ref> waa siyaasi Soomaali,  ahna [[Ra'iisul wasaarahii hore ee soomaaliya|Raiisul Wasaaraha]] [[Soomaaliya]] . Waxaa loo magacaabay 23 Febraayo [[2017]],waxaana uu xilka dagay 25 July 2020 waxaa u magacaabay Madaxweynaha Soomaaliya [[Maxamed Cabdulaahi Maxamed]]<ref> http://mareeg.com/somali-new-president-appoints-hassan-ali-khaire-as-prime-minister/</ref>, waxaana ansixiyay xubnaha baarlamaankana badankooda 1da maarso [[2017]].<ref> http://goobjoog.com/english/parliament-unanimously-endorses-hassan-khaire-new-pm|title=Parliament unanimously endorses Hassan Khaire as new PM|publisher=Goobjoog News|date=1 March 2017</ref>, Waxaa u codeysay 231 xildhibaan oo ah dhammaan mudanayaasha fadhiga baarlamaanka<ref>https://www.bbc.com/somali/war-39125689</ref> 
 
 Khaire wuxuu horey u ahaan jiray madaxa fulinta [[Batrool|batroolka]]. Wuxuu ahaa agaasime gobol oo ka tirsan hay'adda samafalka ee [[Norwegian Refugee Council]] wuxuuna agaasime ka ahaa qeybta afrika shirkadda saliidda ee Ingiriiska [[Soma Oil and Gas]].<ref>http://www.aftenposten.no/verden/Nordmann-ny-statsminister-i-Somalia-615810b.html|title=Nordmann ny statsminister i Somalia|newspaper date=2017-02-23|language=Norwegian}}</ref><ref> http://abcnews.go.com/International/wireStory/somalias-president-appoints-prime-minister-45680284|title=Somalia's new president appoints prime minister|agency=[[Associated Press]]|first=Abdi |last=Guled |publisher=[[ABC News]]|access-date=2017-02-23</ref>
-
 
 ==Taariikh nololeedkiisa==
 [[Ceel Buur|Xasan Cali Khayre wuxuu ku dhashay bartamaha Soomaaliya magaalada ceelbuur ee gobolka Galgaduud sanadkii 1968,]]<ref>https://www.togaherer.com/2017/02/23/taariikh-nololeedka-raiisul-wasaare-xasan-cali-khayre/</ref>  [[Ceel Buur|Wuxuu waxbarashadiisa ilaa Dugsi Sare kaga baxay Cismaan Geeddi Raage ee magaalada Muqdisho sanadkii 1986dii.]]<ref> http://somalitalk.com/2017/02/24/taariikh-nololeedka-raiisul-wasaaraha-la-magacaabay/</ref> [[Ceel Buur|, Intii u dhexeysay sannadihii 1994-1998 ayuu ka baxay Jaamacadda University of Oslo ee dalka Norway, isagoo ka diyaariyey darajada 1aad ee cilmiga siyaasadda iyo Sociology. Darajada 2aad ee Master-ka wuxuu ka qaatay MBA Jaamacadda Thoroughgoing ee waddanka Skotland sannadkii 2001]]<ref> https://www.araweelonews.com/warar/waa-kuma-taariikhda-raiisal-wasaare-cusub-ee-soomaaliya-xasan-cali-khayre-iyo-fadeexadaha-lala-xidhiidhiyay/</ref>
