/* Taariikh nololeedkiisa */Thanks

--- a/Xasan_Khayre.mw
+++ b/Xasan_Khayre.mw
@@ -10,7 +10,7 @@ Khaire wuxuu horey u ahaan jiray madaxa fulinta [[Batrool|batroolka]]. Wuxuu aha
 [[Ceel Buur|Khaire waa nin heysta dhalashada Norway iyo Soomaaliya.]]<ref> http://www.vg.no/nyheter/utenriks/afrika/norske-hassan-ny-statsminister-i-somalia/a/23932541/|title=Norske Hassan ny statsminister i Somalia|newspaper=[[Verdens Gang]]|access-date=2017-02-24|language=Norwegian</ref> 
 [[Ceel Buur|Intii u dhexeysay sanadadii 2002-2005, waxaa u ka shaqeynayay dhinca ganacsiga, sandkii 2006 waxa uu noqday Agaasimaha Xaafiisyadda Soomaaliya iyo Kenya iyo Agaasimaha Geeska Afrika]] <ref> https://warsom.com/wararka/2017/02/wax-ka-baro-taariikhda-xasan-cali-kheyre-oo-loo-magacaabey-rw-soomaaliya/</ref>
 
-[[Ceel Buur|<br />]]
+Waxaa qoray mubarak
 
 [[Ceel Buur|<br />]]
 
@@ -19,5 +19,8 @@ Khaire wuxuu horey u ahaan jiray madaxa fulinta [[Batrool|batroolka]]. Wuxuu aha
 [[Ceel Buur|<br />]]
 
 [[Ceel Buur|<br />]]
+
+[[Ceel Buur|<br />]]
+
 ==Tixraac==
 [[Category:siyaasiinta soomaaliya]]
