--- a/Xasan_Khayre.mw
+++ b/Xasan_Khayre.mw
@@ -1,6 +1,6 @@
 [[File:Hassan Ali.png|300px|right|thumb]]
 
-'''Xasan Cali Khayre'''  dhashay 15 Abriil [[1968]], oo loo yaqaan Xasan Khayre<ref>http://www.africanews.com/2018/08/14/eritrea-delegation-in-somalia-to-deepen-bilateral-relations/</ref> waa siyaasi Soomaali,  ahna [[Ra'iisul wasaarahii hadda ee soomaaliya|Raiisul Wasaaraha]] [[Soomaaliya]] . Waxaa loo magacaabay 23 Febraayo [[2017]],waxaa u magacaabay Madaxweynaha Soomaaliya [[Maxamed Cabdulaahi Maxamed]]<ref> http://mareeg.com/somali-new-president-appoints-hassan-ali-khaire-as-prime-minister/</ref>, waxaana ansixiyay xubnaha baarlamaankana badankooda 1da maarso [[2017]].<ref> http://goobjoog.com/english/parliament-unanimously-endorses-hassan-khaire-new-pm|title=Parliament unanimously endorses Hassan Khaire as new PM|publisher=Goobjoog News|date=1 March 2017</ref>, Waxaa u codeysay 231 xildhibaan oo ah dhammaan mudanayaasha fadhiga baarlamaanka<ref>https://www.bbc.com/somali/war-39125689</ref> 
+'''Xasan Cali Khayre'''  dhashay 15 Abriil [[1968]], oo loo yaqaan Xasan Khayre<ref>http://www.africanews.com/2018/08/14/eritrea-delegation-in-somalia-to-deepen-bilateral-relations/</ref> waa siyaasi Soomaali,  ahna [[Ra'iisul wasaarahii hadda ee soomaaliya|Raiisul Wasaaraha]] [[Soomaaliya]] . Waxaa loo magacaabay 23 Febraayo [[2017]],waxaa u magacaabay Madaxweynaha Soomaaliya [[Maxamed Cabdulaahi Maxamed]]<ref> http://mareeg.com/somali-new-president-appoints-hassan-ali-khaire-as-prime-minister/</ref>, waxaana ansixiyay xubnaha baarlamaankana badankooda 1-da maarso [[2017]].<ref> http://goobjoog.com/english/parliament-unanimously-endorses-hassan-khaire-new-pm|title=Parliament unanimously endorses Hassan Khaire as new PM|publisher=Goobjoog News|date=1 March 2017</ref>, Waxaa u codeysay 231 xildhibaan oo ah dhammaan mudanayaasha fadhiga baarlamaanka<ref>https://www.bbc.com/somali/war-39125689</ref> 
 
 Khaire wuxuu horey u ahaan jiray madaxa fulinta [[Batrool|batroolka]]. Wuxuu ahaa agaasime gobol oo ka tirsan hay'adda samafalka ee [[Norwegian Refugee Council]] wuxuuna agaasime ka ahaa qeybta afrika shirkadda saliidda ee Ingiriiska [[Soma Oil and Gas]].<ref>http://www.aftenposten.no/verden/Nordmann-ny-statsminister-i-Somalia-615810b.html|title=Nordmann ny statsminister i Somalia|newspaper date=2017-02-23|language=Norwegian}}</ref><ref> http://abcnews.go.com/International/wireStory/somalias-president-appoints-prime-minister-45680284|title=Somalia's new president appoints prime minister|agency=[[Associated Press]]|first=Abdi |last=Guled |publisher=[[ABC News]]|access-date=2017-02-23</ref>
 
