waxaan ka saaray qoraalo oo qoray qof leh ciwaanka ipka 197.220.84.68

--- a/Xasan_Khayre.mw
+++ b/Xasan_Khayre.mw
@@ -7,22 +7,12 @@ Bishii July 2020 ayay 170 xildhibaan oo ka tirsan golaha shacabka kala noqdeen k
 Khaire wuxuu horey u ahaan jiray madaxa fulinta [[Batrool|batroolka]]. Wuxuu ahaa agaasime gobol oo ka tirsan hay'adda samafalka ee [[Norwegian Refugee Council]] wuxuuna agaasime ka ahaa qeybta afrika shirkadda saliidda ee Ingiriiska [[Soma Oil and Gas]].<ref>http://www.aftenposten.no/verden/Nordmann-ny-statsminister-i-Somalia-615810b.html|title=Nordmann ny statsminister i Somalia|newspaper date=2017-02-23|language=Norwegian}}</ref><ref> http://abcnews.go.com/International/wireStory/somalias-president-appoints-prime-minister-45680284|title=Somalia's new president appoints prime minister|agency=[[Associated Press]]|first=Abdi |last=Guled |publisher=[[ABC News]]|access-date=2017-02-23</ref>
 
 ==Taariikh nololeedkiisa==
-[[Ceel Buur|Xasan Cali Khayre wuxuu ku dhashay bartamaha Soomaaliya magaalada ceelbuur ee gobolka Galgaduud sanadkii 1968,]]<ref>https://www.togaherer.com/2017/02/23/taariikh-nololeedka-raiisul-wasaare-xasan-cali-khayre/</ref>  [[Ceel Buur|Wuxuu waxbarashadiisa ilaa Dugsi Sare kaga baxay Cismaan Geeddi Raage ee magaalada Muqdisho sanadkii 1986dii.]]<ref> http://somalitalk.com/2017/02/24/taariikh-nololeedka-raiisul-wasaaraha-la-magacaabay/</ref> [[Ceel Buur|, Intii u dhexeysay sannadihii 1994-1998 ayuu ka baxay Jaamacadda University of Oslo ee dalka Norway, isagoo ka diyaariyey darajada 1aad ee cilmiga siyaasadda iyo Sociology. Darajada 2aad ee Master-ka wuxuu ka qaatay MBA Jaamacadda Thoroughgoing ee waddanka Skotland sannadkii 2001]]<ref> https://www.araweelonews.com/warar/waa-kuma-taariikhda-raiisal-wasaare-cusub-ee-soomaaliya-xasan-cali-khayre-iyo-fadeexadaha-lala-xidhiidhiyay/</ref>
+Xasan Cali Khayre wuxuu ku dhashay bartamaha Soomaaliya magaalada ceelbuur ee gobolka Galgaduud sanadkii [[1968]],<ref>https://www.togaherer.com/2017/02/23/taariikh-nololeedka-raiisul-wasaare-xasan-cali-khayre/</ref>  Wuxuu waxbarashadiisa ilaa Dugsi Sare kaga baxay Cismaan Geeddi Raage ee magaalada Muqdisho sanadkii [[1986]]dii.<ref> http://somalitalk.com/2017/02/24/taariikh-nololeedka-raiisul-wasaaraha-la-magacaabay/</ref> , Intii u dhexeysay sannadihii 1994-1998 ayuu ka baxay Jaamacadda University of Oslo ee dalka Norway, isagoo ka diyaariyey darajada 1aad ee cilmiga siyaasadda iyo Sociology. Darajada 2aad ee Master-ka wuxuu ka qaatay MBA Jaamacadda Thoroughgoing ee waddanka Skotland sannadkii [[2001]]<ref> https://www.araweelonews.com/warar/waa-kuma-taariikhda-raiisal-wasaare-cusub-ee-soomaaliya-xasan-cali-khayre-iyo-fadeexadaha-lala-xidhiidhiyay/</ref>
 
-[[Ceel Buur|Khaire waa nin heysta dhalashada Norway iyo Soomaaliya.]]<ref> http://www.vg.no/nyheter/utenriks/afrika/norske-hassan-ny-statsminister-i-somalia/a/23932541/|title=Norske Hassan ny statsminister i Somalia|newspaper=[[Verdens Gang]]|access-date=2017-02-24|language=Norwegian</ref> 
-[[Ceel Buur|Intii u dhexeysay sanadadii 2002-2005, waxaa u ka shaqeynayay dhinca ganacsiga, sandkii 2006 waxa uu noqday Agaasimaha Xaafiisyadda Soomaaliya iyo Kenya iyo Agaasimaha Geeska Afrika]] <ref> https://warsom.com/wararka/2017/02/wax-ka-baro-taariikhda-xasan-cali-kheyre-oo-loo-magacaabey-rw-soomaaliya/</ref>
+Khaire waa nin heysta dhalashada Norway iyo Soomaaliya.<ref> http://www.vg.no/nyheter/utenriks/afrika/norske-hassan-ny-statsminister-i-somalia/a/23932541/|title=Norske Hassan ny statsminister i Somalia|newspaper=[[Verdens Gang]]|access-date=2017-02-24|language=Norwegian</ref> 
+[[Ceel Buur|Intii u dhexeysay sanadadii 2002-2005, waxaa u ka shaqeynayay dhinca ganacsiga, sandkii 2006 waxa uu noqday Agaasimaha Xaafiisyadda Soomaaliya iyo Kenya iyo Agaasimaha Geeska Afrika <ref> https://warsom.com/wararka/2017/02/wax-ka-baro-taariikhda-xasan-cali-kheyre-oo-loo-magacaabey-rw-soomaaliya/</ref>
 
-Waxaa qoray mubarak
 
-[[Ceel Buur|<br />]]
-
-[[Ceel Buur|<br />]]
-
-[[Ceel Buur|<br />]]
-
-[[Ceel Buur|<br />]]
-
-[[Ceel Buur|<br />]]
 
 ==Tixraac==
 [[Category:siyaasiinta soomaaliya]]
