*Empty MediaWiki Message*

--- a/Ra'iisul_wasaarayaashii_Soomaaliya.mw
+++ b/Ra'iisul_wasaarayaashii_Soomaaliya.mw
@@ -243,10 +243,18 @@ Raisulwasaraayaashii Somaliya==
 |1968–
 |—
 |23 February 2017
+|25 July 2020 
+|''Madaxbanaan''
+|-
+!(14)
+|[[Mahdi Mohamed Guleid]]
+|
+|
+|—
+|25 July 2020
 |Incumbent
 |''Madaxbanaan''
 |}
-[[File:Hassan Ali.png|thumb]]
 
 ==Sawiro Ra'iisal Wasaarayaasha==
 <gallery widths="208" heights="208" caption="">
