*Empty MediaWiki Message*

--- a/Mudug.mw
+++ b/Mudug.mw
@@ -56,15 +56,19 @@
 * [[goldogob|Galdogob]]
 * [[Hobyo]]
 * [[Ceeldheer old City|bandiiradleey]]
+* Bacadweyne
 
 === Degmooyinka kale ===
 *[[Miiroon]]
+*Jiicdheere 
 *[[Bursaalax|Dagaari]]
 * [[wisil]]
 * [[garacad]]
 *[[Caad]]
+*Baraag ciise
 * [[Bursaalax|ceelguula]]
 * [[Dinowda]]
+* Qeycad
 * [[Kalabayr]]
 * [[Ceel Huur|Ceel huur]]
 * [[Xinlabi]]
