*Empty MediaWiki Message*

--- a/Bacaad_weyne.mw
+++ b/Bacaad_weyne.mw
@@ -1,5 +1,5 @@
 {{Infobox settlement
-|official_name          =Bacaad weyne
+|official_name          =Bacadweyne
 |other_name             =
 |native_name            =  
 |nickname               = 
