*Empty MediaWiki Message*

--- a/Mudug.mw
+++ b/Mudug.mw
@@ -56,7 +56,7 @@
 * [[goldogob|Galdogob]]
 * [[Hobyo]]
 * [[Ceeldheer old City|bandiiradleey]]
-* Bacaad weyne
+* Bacadweyne
 
 === Degmooyinka kale ===
 *[[Miiroon]]
