--- a/Begedi.mw
+++ b/Begedi.mw
@@ -1,4 +1,4 @@
-(Begedi Clansman) [[File:Begedi Clansman.jpg | thumb | 220x124px | right]]
+(Begedi Clansman)
 
 Beesha '''Begedi''' / Bagadi Sido kale loogu waco (Mucajab)  kamid ah beelwaynta Raxaweyn Aw Digil  , Begedi wuxuu uqaybsamaa :
 
