*Empty MediaWiki Message*

--- a/Mesut_ozil.mw
+++ b/Mesut_ozil.mw
@@ -9,6 +9,8 @@
 
 [[File:20180602 FIFA Friendly Match Austria vs. Germany Mesut Özil 850 0704.jpg|thumb|250px|right]]
 ''''<ref>Mesut Özil</ref>''' (Afka Jarmalka: [<ref>ˈmeːzut ˈøːzil</ref>],Afka Turkiga: [<ref>me̞ˈsut ˈø̞zil]) </ref>
-Wuxuu dhashay 15 Oktoobar 1988)waa ciyaaryahan K/Cagta ah kana ciyaara qadka dhexe, una ciyaara kooxda ka dhisan <ref>La liga</ref> ha Ispaanishka ee <ref>Real Madrid</ref> iyo Xulka Qaranka Dalka Jarmalka (<ref>Germany national football team</ref>). Ozil waxa uu xubin ka ahaa xul qaran illaa iyo 2006, waxa uuna ka mid ahaa xulka qaranka Jarmalka illaa iyo 2009.
+Wuxuu dhashay 15 Oktoobar 1988) Waa ciyaaryahan K/Cagta u ciyaara kooxda Arsenal kana ciyaara qadka dhexe, waxa uu u ciyaari jiray Xulka Qaranka Dalka Jarmalkan balse sanadkii 2018 ayu shaaciyay inuu ka fariistay u ciyaarista Jarmalka maadaama lagu cunsuriyeeyay sawir uu la galay madaxweynaha Turkiga oo uu Arooskiisa ku casuumay taas oo loo arkay dano siyaasadeed maadaama uu asal ahaan Turkiga u dhashay
+
+(<ref>Germany national football team</ref>). Ozil waxa uu xubin ka ahaa xul qaran illaa iyo 2006, waxa uuna ka mid ahaa xulka qaranka Jarmalka illaa iyo 2009.
 [[File:Özil Arsenal.jpg|thumb|right|Özil playing for Arsenal in the [[UEFA Europa League]] in 2018]]
 [[File:Jerome Boateng 2011 Germany.jpg|thumb|210px|right|Özil lining up for Germany with [[Mario Götze]] (left) and [[Jérôme Boateng]] (in the middle) prior to a match in 2011.]]
