--- a/Cumar_samatar.mw
+++ b/Cumar_samatar.mw
@@ -10,9 +10,7 @@ Qoraaga reer Jabuuti ee Cabdalla Xaaji Cusmaan ayaa qoraalo taxane ah oo uu ku s
 
 Cumar Samatar magaciisa waxaan bartay dhawr iyo lixdannadii, qiyaastii toban jir umbaan ahaa berigaa. Waxa uu magaciisu ku qornaa waddo aad u yar oo ku taal magaaladii aan ku dhashay ee Diri-Dhaba, sidan ayuuna ugu qornaa (Dejazmaj Umar Samatar) aad baan ula yaabi jirey ninkan Soomaaliga ah ee waddadan magaciisa la siiyey, waayo? Berigaa annagoo carruura ayaan aad u dareemi jirnay cadaawadda Xabashidu u hayso Soomaalida, dareenkaa waxa nagu abuuray dhacdooyin badan oo dadka waaweyni aad u hadal-hayeen waayadaa, gaar ahaan xasuuqii Ayshaca ee bishii Ogost 1960kii. Anoo yaaban baan Allaha u naxariistee aabbahay weydiiyey, muxuu yahay ninkan Soomaaliga ah ee magaciisa lagu qoray waddadan? Waa raggii Talyaaniga la dagaallamay oo kooban buu iigu jawaabay madaama aan ahaa kuray yar oo aan fahmi karin dagaalladii Talyaaniga lala galay. Horta magaca Cumar Samatar berigaa aan carruuta ahaa ayaan bartay, laakiin markaan weynaaday waxna aan bartay buugaag badanna aan nasiib u yeeshay inaan akhriyo isla markaana aan dhegeystay suugaan badan oo duuban, baan ogaaday inuu Cumar Samatar ahaa geesi la dagaallamay Talyaanigii koonfurta Soomaaliya gumaysan jirey. Cumar Samatar waxa uu ku dhashay tuulada Geesaley oo ku taal xeebta badda cas, koofur-galbeedna ka xigta magaalada Caluula ee ku taal geeska waqooyi-Bari ee Soomaaliya, waxayna u dhaxaysaa Xaabo iyo Murcanyo. Qarnigii 19aad dabayaaqadiisii ayuu dhashay sida la sheegay, isla deegaankaa ayuu ku koray waxna ku bartay. Cumar Samatar magaalada Hobyo ayuu u wareegay halkaas oo berigaa ay ka talin jirtay Saldanaddii Yuusuf Keenadiid, Suldaanka ayaa Cumar eddedii u dhaxday. Cumar Samatar oo ahaa barbaar firfircoon oo muuqda aakhirkii la-taliye ayuu u noqday Suldaan Yuusuf Keenadiid. Yuusuf Keenadiid markuu geeryooday taladii Saldanadda wiilkiisii Cali Yuusuf Keenadiid baa la wareegay. Cumar Samatarna waxa uu ka mid noqday ku-xigeennadii suldaanka, isla markaana degmada Ceelbuur ayuu guddoomiye (naa'ib) ka noqday. Sannadkii 1919kii, markii uu gumaysigii Ingiriisku duullaanka ballaadhan ku qaaday Daraawiish ee uu jebiyey, xilligaa wixii ka dambeeyey ayuu gumaysigii Talyaaniguna ka soo dhaqaaqay xeebaha oo uu gudaha dalka soo galay. Saldanaddii Hobyo ee Cali Keenadiid iyo tii Boqor Cismaan ee ka talinaysay Bari ayuu Talyaanigu ku amray inay is-dhiibaan, kadib markay diideenna xoog ayuu ku soo galay. Waa berigaa waxa uu Cumar Samatar rag iyo hubba intuu urursaday uu ka hor tagey Talyaaniga. 1924kii ayuu Talyaanigu weerar ku soo qaaday qalcad ku taallay Ceelbuur, halkaa dagaalkii ka dhacay ciidankii Talyaaniga ayaa si xun loogu jebiyey, tobannaan ciidankiisii ah iyo taliyihii watayba goobtaa baa lagu laayey, hub bandanna lagaga furtay. Gumaysigii Talyaaniga markuu jabkaasi ku dhacay tabaabushe xoog leh oo saddex sano socday buu galay. 1927kii ayuu weerar kale soo qaaday, ciidankii Cumar Samatar iyo kuwii cadawga oo kumanyaal ah ayuu dagaal ba’ani ku dhex maray ceelka Garloogube. Inkastoo si geesinimo leh u dagaal galeen ciidankii Cumar Samatar aakhirkii waa la jabiyey. Raggii soo gurmaday ee goobtaa ku shahiiday waxa ka mid ahaa Abshir Dhoorre Xasan oo ahaa Abbaanduulihii Daraawiishta. Xilligaa kadib Cumar Samatar waxa uu degay magaalada Harar. 1939kii, markuu Talyaanigu ku duulay ee uu qabsaday Itoobiya, Cumar uu ka baxay Harar, sida la sheegay Yurub buu u qaxay. Jabkii Talyaaniga kadib buu ku soo noqday Harar halkaas oo uu ku geeryooday sannadkii 1946kii. Haddaba taariikhdaa Cumar Samatar waxa afduub ku qaatay boqorkii Xabashida Haile Selase oo diiwaanka sooyaalkiisa ku darsaday, isagoo sheegtay inuu Cumar ahaa geesi Itoobiyaan ah oo lasoo dagaallamay faashiistadii Talyaaniga una soo halgamay sidii uu Koonfurta Soomaaliya ugu soo dari lahaa Itoobiyada weyn. Haile Selase si uu ummadda u habaabiyo ayuu Cumar Samatar ku magacaabay mid ka mid darajooyinkii uu siin jirey kuwa isaga daacadda u ah, taasoo ah Dejazmaj. Ruuxii arkay baa xusuusane madarasadda Quraanka iyo Carabiga lagu barto ee ku taal Masjidka weyn ee (Anwar) ee ku yaal badhtamaha Addis Ababa hortiisa, ayuu ku magacaabay Cumar Samatar. Halkaa aan ku yar hakado, Masjidkaa weyn ee Anwar baan la yaabay berigii iigu horreysay een arkay, waxa maankaygu qaadan waayey sida Haile Selase ugu oggolaaday muslimiinta Itoobiya inay goobtaa malkadaah ka dhistaan masjidkaa weyn ee caasimadda Itoobiya aad uga dhex muuqda, iyadoo la og yahay 1887kii, markii Xabashidu qabsatay Harar oo ahayd xaruntii Islaamka Geeska Afrika sidii uu Haile Selase aabbihii Ras Mokonen, oo ahaa abbaanduulihii ciidanka Menelik uu gacantiisa ugu dumiyey masjidkii weynaa ee magaalada Harar badhtamaheeda ka dhisnaa boqollaalka sannadood laguna beddelay kanniisada ilaa maanta halkii ka dhisan. Sayid Cabdikariim Sayid Maxamad Cabdille Xasan oo isagu muddo konton sannadood ka badan ku noolaa Addis Ababa ayaan su’aashan weydiiyey, Sayidii sidee Haile Selase muslimiinta ugu oggolaaday inay masjidkan sidaa u weyn uga dhistaan caasimaddan Itoobiya? Waxauu yidhi Sayidku, berigii uu socday dagaalkii labaad ee Talyaaniguna qabsaday Itoobiya oo dhan ayaa muslimiintu ka faa’iidaysteen oo ay dhisteen masjidkan weyn ee Alwar, Talyaanigii ayaana u oggolaaday. Taasi waxay I xasuusisay masjid kale oo weyn kana dhisan magaalada Diri-Dhaba oo Allaha u naxariistee aabbahay ii sheegay in la dhisay xilligii Talyaaniga. An ku soo noqdo sooyaalkii Cumar Samatar, sannadkii 1985kii oo ahaa markii ay ugu xoog badnaayeen jabhadihii dagaalka kula jirey dawladdii Maxamad Siyaad Barreh, ayaa wargeyska ku hadla afka xukuumadda Itoobiya ee Ethiopian Herald ee ku soo baxa af Ingiriiska soona baxay 24 Mars 1985, uuna qoray ninka la yidhaa Mellese Tilahun, ayaa soo daabacay qoraal dheer oo sheegaya in Cumar Samatar ahaa geesi Itoobiya u dhashay una soo halgamay midnimada dalka. Haddaba is-weydiintu waxay tahay, maxaa dawladihii kala dambeeyey ee Itoobiya u sheegtaan taariikhda geesiyaashii u soo halgamay xoraynta ummadda Soomaaliyeed? Warcelinta meel fog ha ka raadiin, waa markay hubsadeen in dadkii lahaa xooreen iyagoo weliba jaahiliin ka ah. Sooyaalka geesiyaasheennu waa sida xoolo baadiya oo cadaw u gacan galay ciddii lahaydna ka seexatay. Haddii aynnu rabno dhaxalkaa lumaya ee dayacan ururintiisa waa in si dhakhso ah loo bilaabo sidii manhajyada loogu dari lahaa ubadkana loo bari lahaa isla markaana dhallinta lagu baraarujiyo barashada taariikhdooda si ay u helaan tixraac taariikheed oo ay ku faanaan, waayo? Ummad aan taariikh lahayn waa ummad aan jirin. Haddii lagu baraarugi waayo oo aan laga damqan maanta waxa socda, berri waxaad filataaba waa Xabashida oo diiwaankooda taariikhda ku qorata in Cabdillaahi Yuusuf, Cabdiraxmaan-Tuur iyoSiilaayo u soo dagaallameen midnimada Itoobiya.
 
-Cabdalla Xaaji Cismaan                     Email: cabdalla_xaaj@yahoo.fr
-
-'''W/Q : Eng Cilmi siciid'''
+Cabdalla Xaaji Cismaan              
 
 ===Halgankii cumar samatar===
 Muddo ka dib halgamaagu waxa uu usoo wareegay gobolada dhexe ee somalia halkaas oo ahayd meeshi uu kabilaaby halganka gumaysi ladirika ah dagaaalkii ugu horreeyay ee dhexmara Cumar iyo Talyaaniga waxaa uu dhacay 09/november/1925 waxaana jabwayn soo gaaray gumaystaha lagana qabsaday dagmada Ceelbuur iyo toolooyin hoos yimaada.
@@ -23,5 +21,3 @@ inkastoo aysan dadka Somaliyeed wax badan kala socon taariikhda halgamaaga hadan
  
 ===Xiriika halgamaga iyo [[ethiopia]]=== 
 Xiriirka wada mideeyay Cumar iyo [[Ethopia]] waxa uu ahaa in ay lawada dagaalamayeen gumaystihii Talyaaniga waana arinta keentay in halgamaagu uu taageero saanadeed ka helo boqortooydii xilligaas Itoobiya katalinaysay, sidaa darteed markii uu soo dhammaaday halganku waxaa halgamaaga loogu magacdaray jaamacado ku yaala [[Ethiopia]] iyo meelo kale oo halbowle u ah bulshada.
-
-'''W/Q : Eng Cilmi siciid'''
