Removing [[:c:File:Sheikh_Abdullahi_Begedi.jpg|Sheikh_Abdullahi_Begedi.jpg]], it has been deleted from Commons by [[:c:User:JuTa|JuTa]] because: No license since 2020-07-07. For more information read the introduction of [[:c:COM:L|]], about [[:c:Commons:E

--- a/Begedi.mw
+++ b/Begedi.mw
@@ -32,7 +32,7 @@ MADAXDA SARE EE BEESHU:
 
 3-Sh. Abdullahi Begedi oo kaalin wayn kasoo qaatay siyaasada Somaliya.
 Wuxuu ahaa xubnaha uga sareeya maxkamada sare dowlada Somaliya xiligii dowlada rayidka ee kahoraysay kacaanka isagoona ahaa ninkii aas aasay xisbigii (HDM 1943).
-Sheikh Abdullahi Begedi [[File:Sheikh Abdullahi Begedi.jpg | thumb | 220x124px | right]]
+Sheikh Abdullahi Begedi
 
 4- Abuukar Sayid Ali oo looyaqan Jaajuumow fanaanka wayn.
 
