Replacing Brazil_vs_Argentina_at_Khalif_a_Stad_in_Doha.JPG with [[File:Khalifa_Stadium,_Doha,_Brazil_vs_Argentina_(2010).jpg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: file renamed or replaced on Commons).

--- a/Koobka_Dunida_2022.mw
+++ b/Koobka_Dunida_2022.mw
@@ -55,7 +55,7 @@ Tani waxay sidoo kale calaamadeyn doontaa Koobka Adduunka ee ugu horeeya ee aan 
 
 7-da Juun 2015, waxaa lagu dhawaaqay in Qatar ay dhici karto in aysan xaq u laheyn inay marti galiso dhacdada, haddii caddaynta laaluushka la xaqiijiyay. "Waa in ay jiraan caddayn ah in abaalmarinta Qatar ... ay timid kaliya sababtoo ah codadka la iibsaday, markaa abaalmarinta waa la joojin karaa". Daawo Sawirada: Qatar ayaa la kulantay dhaleeceyn xooggan sababtoo ah daaweynta shaqaalaha ajnabiga ah ee ku lug leh diyaarinta Koobka Adduunka, iyada oo Amnesty International ay ku tiirsan tahay "shaqo khasab ah" iyo tilmaamaya in shaqaaluhu ay la kulmeen xadgudubyada xuquuqda aadanaha, inkasta oo heerarka barwaaqosooranka la qoro 2014-ka. 8]
 
-[[File:Brazil vs Argentina at Khalif a Stad in Doha.JPG|thumb|right|800px| Qatar kubedka Dawoka]]
+[[File:Khalifa Stadium, Doha, Brazil vs Argentina (2010).jpg|thumb|right|800px| Qatar kubedka Dawoka]]
 
 
 
