*Empty MediaWiki Message*

--- a/Pumuang_Duangjan.mw
+++ b/Pumuang_Duangjan.mw
@@ -1,10 +1,10 @@
 {{Infobox person
 | name = Pumpuang Duangjan
-| image =
-| image_size = 
+| image =Pumpuang Duangjan portrait.jpg
+| image_size = 210px
 | caption = 
 | birth_name = Ramphueng Chit-han 
-| honorific_suffix = [[Order of the Direkgunabhorn|BP]]
+| honorific_suffix = 
 | birth_date = {{Birth date|1961|8|4}}
 | death_date ={{Death date and age|1992|6|13|1961|8|4}}
 | death_place =[[Phitsanulok Province|Phitsanulok]], Thailand
